syntax = "proto3";
package protos.output.language_specific;

option go_package = "code-analyser/protos/pb/output/languageSpecific";

import "protos/plugin/commands.proto";

message Commands {
    proto.CommandsOutput buildCommands = 1;
    proto.CommandsOutput startUpCommands = 2;
    proto.CommandsOutput seedCommands = 3;
    proto.CommandsOutput MigrationCommands = 4;
    proto.CommandsOutput adHocScriptsOutput = 5;
}